# optimization_learning

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml
.devcontainer/: Dockerfile  build.sh  devcontainer.json
benchmark/: downsampling_benchmark.cpp  parallel_benchmark.cpp  registration_benchmark.cpp  transformcloud_benchmark.cpp
config/: odometry.yaml
data/: source.pcd
doc/: kitti2ros2bag.py  kitti_2011_10_03_0027_gt.txt  read_ground_truth.py
include/optimization_learning/: R_mean.hpp  cloud_process.hpp  common.hpp  downsampling.hpp  eskf.hpp  gicp.hpp  icp.hpp  ikd_Tree.h  imu_integration.hpp  ndt.hpp  odometry.hpp  point_to_plane_icp.hpp  registration_base.hpp  so3_tool.hpp  transform_point_cloud.hpp
launch/: odometry.launch.py
map/: plot.py
rviz/: odometry.rviz  qos_overrides.yaml
src/: R_mean.cpp  eskf.cpp  icp.cpp  imu_integration.cpp  odometry.cpp  pcd_icp.cpp
test/: downsampling_test.cpp  icp_test.cpp  registration_test.cpp  test_icp.cpp  transformcloud_test.cpp
